# dynamic_model

./: CMakeLists.txt  README.md  dynamic_model.bash  package.xml  test.launch  test.world  test2.world
include/dynamic_model/: obstaclePathPlugin.hh
models/test_model/: model.config  model.sdf
models/test_model/meshes/: test_model.dae
src/: obstaclePathPlugin.cc  obstaclePathPlugin（复件）.cc
